@@ -1,4 +1,9 @@
 
+2017-04-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* parser.y: fixed missing initialization for programs without
+	  PROCEDURE DIVISION
+
 2017-04-08  Edward Hart <edward.dan.hart@gmail.com>
 
 	* cobc.c, codegen.c, pplex.l: fixed buffer overflows and double
